# CSignAPK

./: CMakeLists.txt  Kernel.hpp  main.cpp
m_apk/: APKObjects.hpp  APKObjectsQueue.hpp
m_apk/local_impl/: APKLocalActionI.hpp  APKLocalEnv.hpp  APKLocalEnvI.hpp  APKLocalFactory.hpp  APKLocalFile.hpp  APKLocalFileSigned.hpp
m_apk/local_impl/bean/: APKLocalBeanFileCon.hpp  APKLocalBeanFileSignedCon.hpp  APKLocalBeanFileSignedVar.hpp  APKLocalBeanFileVar.hpp
m_apk/signed_impl/: APKSignedCert.hpp  APKSignedCertBlockI.hpp  APKSignedCertRSA.hpp  APKSignedManifest.hpp  APKSignedManifestBlockI.hpp  APKSignedStreamI.hpp
m_library/: LibrarySignAPK.h  LibrarySignAPK.hpp  LibrarySignAPKDefine.hpp  LibrarySignAPKExtSignI.h  LibrarySignAPKI.h
m_library/impl/: LibraryImplPKCS7Sign.hpp  LibraryImplSignAPK.hpp  LibraryImplX509ReqSign.hpp  LibraryImplX509Sign.hpp
m_test/: TestSignAAPK.cpp
m_utils/: UtilsBase64.hpp  UtilsHEX.hpp  UtilsPKCS.hpp  UtilsSHA.hpp  UtilsString.hpp  UtilsX509.hpp  UtilsZip.hpp
m_utils/pkcs/: UtilsPKCS7SignI.hpp  UtilsPKCS7SignWithOpenSSL.hpp  UtilsPKCSAdapter.hpp  UtilsPKCSRSAPadding.hpp  UtilsPKCSType7I.hpp  UtilsPKCSType7OpenSSL.hpp  UtilsPKCSType7WithOpenSSL.hpp
m_utils/sha/: UtilsSHA1I.hpp  UtilsSHA1WithOpenSSL.hpp  UtilsSHA256I.hpp  UtilsSHA256WithOpenSSL.hpp  UtilsSHAAdapter.hpp
m_utils/x509/: UtilsX509Adapter.hpp  UtilsX509I.hpp  UtilsX509RSAPadding.hpp  UtilsX509ReqI.hpp  UtilsX509ReqWithOpenSSL.hpp  UtilsX509SignI.hpp  UtilsX509SignWithOpenSSL.hpp  UtilsX509Version.hpp  UtilsX509WithOpenSSL.hpp
m_utils/zip/: UtilsZipMode.hpp  UtilsZipPack.hpp  UtilsZipPackI.hpp  UtilsZipPackZLIB.hpp  UtilsZipUnPack.hpp  UtilsZipUnPackI.hpp  UtilsZipUnPackInterceptI.hpp  UtilsZipUnPackZLIB.hpp
